--- a/hakathon-front/index.html
+++ b/hakathon-front/index.html
@@ -86,7 +86,7 @@
      <article class="menu-image"></article>
      <article class="menu-text">
          <div class="menu-text-center">
-             <h1>Our Moto</h1>
+             <h1>Our Motto</h1>
              <p>Every person who comes to us should get proper advice and treatment.</p>
                 <a href="#">Explore</a>
          </div>
