--- a/hakathon-front/index.html
+++ b/hakathon-front/index.html
@@ -17,7 +17,7 @@
     <div class="hero">
     <h1 class="title">Stress to Happiness</h1>
     <p class="pi">We all face challenges in our mental well-being but there is always a way through.</p>
-    <a href="#" class="hero-button pulsate">Test yourself</a>
+    <a href="#" class="hero-button pulsate">Welcome to apollo family</a>
     </div>
      
 </header>
