--- a/hakathon-front/index.html
+++ b/hakathon-front/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/c5a88a0c1b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@700&display=swap" rel="stylesheet">
+    <div style="float: left;position: fixed;bottom: 0;right: 0;"><iframe src="https://www.smatbot.com/kya_backend/share?code=MEDBOT_4780" style="border:0;" width="400" height="500"></iframe></div>
     
 </head>
 <body>
